# Wuddle

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTEXT.md  ICED_DOCUMENTATION.md  LICENSE  README.md  release_notes.txt
.github/workflows/: iced-release.yml  release-build.yml
wuddle-engine/: Cargo.toml
wuddle-engine/src/: db.rs  direct.rs  git_sync.rs  github.rs  install.rs  lib.rs  main.rs  model.rs  util.rs
wuddle-engine/src/forge/: git_sync.rs  gitea.rs  github.rs  gitlab.rs  mod.rs
wuddle-gui/: README.md  package-lock.json  package.json
wuddle-gui/scripts/: sync-version.mjs  tauri-linux.sh
wuddle-gui/src/: about.js  auth.js  commands.js  gif-decode.js  gif-player.js  highlight.js  home.js  index.html  logs.js  main.js  presets.js  profiles.js  repos.js  state.js  styles.css  turtle.js  tweaks.js  ui.js  utils.js
wuddle-gui/src-tauri/: Cargo.toml  tauri.conf.json
wuddle-gui/src-tauri/capabilities/: default.json
wuddle-gui/src-tauri/icons/: icon.icns
wuddle-gui/src-tauri/src/: lib.rs  main.rs  self_update.rs  tweaks.rs
wuddle-iced/: Cargo.toml  ICED_DOCUMENTATION.md  PORTING_CHECKLIST.md
wuddle-iced/scratch/: test_git2.rs
wuddle-iced/src/: anchored_overlay.rs  main.rs  message.rs  monitor.rs  radio.rs  service.rs  settings.rs  theme.rs  tweaks.rs
wuddle-iced/src/app/: mod.rs
wuddle-iced/src/components/: chrome.rs  drop_overlay.rs  helpers.rs  markdown.rs  mod.rs  presets.rs
wuddle-iced/src/dialogs/: changelog.rs  dll_warning.rs  instance.rs  mod.rs  mod_file_info.rs  mods_warning.rs  remove_repo.rs  simple_warnings.rs
wuddle-iced/src/panels/: about.rs  dxvk_config.rs  home.rs  logs.rs  mod.rs  options.rs  projects.rs  radio.rs  tweaks.rs
wuddle-iced/src/types/: config.rs  dialog.rs  mod.rs  tabs.rs  toasts.rs  tweak_types.rs
wuddle-iced/src/update/: about.rs  misc.rs  mod.rs  radio.rs  repos.rs  settings.rs  tweaks.rs
wuddle-launcher/: Cargo.toml  build.rs  resources.rc
wuddle-launcher/src/: main.rs
wuddle-ply/: Cargo.toml
wuddle-ply/src/: main.rs
