[package]
name = "wuddle-engine"
version = "0.1.3"
edition = "2021"

[lib]
name = "wuddle_engine"
path = "src/lib.rs"

[[bin]]
name = "wuddle"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dirs = "5"
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = "0.7"
zip = "2"
sha2 = "0.10"
hex = "0.4"
url = "2"
urlencoding = "2"
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "https"] }
tempfile = "3"

[target.'cfg(windows)'.dependencies]
junction = "1"
