[package]
name = "wuddle-iced"
version = "3.0.0-alpha.2"
description = "Wuddle v3 — native GPU-rendered frontend using Iced"
edition = "2021"

[[bin]]
name = "wuddle"
path = "src/main.rs"

[dependencies]
wuddle-engine = { path = "../wuddle-engine" }
iced = { version = "0.14", features = ["markdown", "image", "svg", "tokio", "canvas", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["rt", "sync"] }
open = "5"
arboard = "3"
rfd = "0.15"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
notify-rust = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
