[package]
name = "wuddle-iced"
version = "3.0.7"
description = "Wuddle v3 — native GPU-rendered frontend using Iced"
edition = "2021"

[[bin]]
name = "wuddle"
path = "src/main.rs"

[dependencies]
wuddle-engine = { path = "../wuddle-engine" }
iced = { version = "0.14", features = ["markdown", "image", "svg", "tokio", "canvas", "advanced"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
tokio = { version = "1", features = ["rt", "sync"] }
open = "5"
arboard = "3"
rfd = "0.15"
keyring = { version = "3", features = ["sync-secret-service", "crypto-rust"] }
notify-rust = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rodio = { version = "0.17", features = ["mp3"] }
image = { version = "0.25", features = ["webp", "jpeg", "png"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
iced_gif = { version = "0.14", features = ["tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = { version = "0.13", features = ["randr"], default-features = false }

[target.'cfg(target_os = "windows")'.dependencies]
zip = "2"
windows-sys = { version = "0.52", features = ["Win32_Graphics_Gdi", "Win32_Foundation"] }
