[package]
name = "wuddle-ply"
version = "3.0.0-alpha.1"
description = "Wuddle v3 — native GPU-rendered frontend using Ply engine"
edition = "2021"

[[bin]]
name = "wuddle"
path = "src/main.rs"

[dependencies]
wuddle-engine = { path = "../wuddle-engine" }
ply-engine = { version = "1.0", features = ["net-json", "tinyvg"] }
